修正了几处图床地址

--- a/_posts/2012-12-28-this-week.md
+++ b/_posts/2012-12-28-this-week.md
@@ -10,7 +10,7 @@ title: 爱过
 ### 礼拜二
 今天做饭时灵感乍现，一个Mac软件。把电影里的对话裁剪成一个个单词长度，用户自定义140字符的短句然后软件生成出视频，很有趣。一回来就花了张界面设计草稿和程序流程，还有点问题需要咨询和解决，我日后详谈。
 
-![idea](http://b124.photo.store.qq.com/psb?/baf23fcf-44c6-45f3-8421-3727345f9986/jO.4gk0ChjXZ*qdf*sJnXTg5Flv.vIJJPKzMiYKCwFQ!/b/dDuz80lTBAAA&bo=gALgAQAAAAABAEQ!&su=061563681&rf=2-9)
+![idea](http://i1289.photobucket.com/albums/b504/Yell0wDi/psb_zps510e4459.jpg)
 
 ### 礼拜三
 自认为扫雪这事就像亲热时放屁一样伤情调。 
