--- a/_posts/2013-04-16-wuhao.md
+++ b/_posts/2013-04-16-wuhao.md
@@ -58,4 +58,4 @@ title: 好黑的哪咤
 --------------------
 
 图为感动的巫豪。
-![screenshot](http://b274.photo.store.qq.com/psb?/baf23fcf-44c6-45f3-8421-3727345f9986/6*FeoWk55BNFZaKFefX26GiidzxWPdKef25sWn9fOwA!/b/dDM*WqMuBwAA&bo=WAIgAwAAAAABAF4!&su=0160924769&rf=2-9)
+![screenshot](http://i1289.photobucket.com/albums/b504/Yell0wDi/psb-1_zps038ca35e.jpg)
